export enum GameScreenSelectors {
    Root = 'GameScreenSelectors.Root',
    TipsButton = 'GameScreenSelectors.TipsButton',
    ShareButton = 'GameScreenSelectors.ShareButton',
    SettingsButton = 'GameScreenSelectors.SettingsButton',
    QuitButton = 'GameScreenSelectors.QuitButton',
    Time = 'GameScreenSelectors.Time',
    PauseButton = 'GameScreenSelectors.PauseButton',
    UndoButton = 'GameScreenSelectors.UndoButton',
    RedoButton = 'GameScreenSelectors.RedoButton',
    Score = 'GameScreenSelectors.Score',
    MaxMistakesAllowed = 'GameScreenSelectors.MaxMistakesAllowed',
    MistakesCount = 'GameScreenSelectors.MistakesCount',
    Level = 'GameScreenSelectors.Level',
    Rating = 'GameScreenSelectors.Rating'
}

