export const ThemeEditorScreenSelectors = {
    Root: 'theme-editor-screen',
    NameInput: 'theme-editor-screen-name-input',
    SaveButton: 'theme-editor-screen-save-button',
    DeleteButton: 'theme-editor-screen-delete-button'
} as const;
