export const ThemesScreenSelectors = {
    Root: 'themes-screen',
    CreateButton: 'themes-screen-create-button'
} as const;
