export enum HomeScreenSelectors {
    Root = 'HomeScreenSelectors.Root',
    StartButton = 'HomeScreenSelectors.StartButton',
    BestScore = 'HomeScreenSelectors.BestScore',
    ComfortOffer = 'HomeScreenSelectors.ComfortOffer',
    ComfortOfferDismiss = 'HomeScreenSelectors.ComfortOfferDismiss',
    ComfortOfferEnable = 'HomeScreenSelectors.ComfortOfferEnable',
    MistakeOption = 'HomeScreenSelectors.MistakeOption',
...
